Fixed background image bleeding into footer

--- a/design.css
+++ b/design.css
@@ -568,6 +568,7 @@ h3 {
   height: 56em;
   background: url("backgrounds/contactmebackground.jpg");
   background-size: cover;
+  box-shadow: 0px -50px 20px -1px rgb(17, 16, 16) inset;
 }
 
 #contactform {
